rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__custom_function_menu_too_narrow_for_descriptions_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        " ┌Tools───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ ",
        " │   open the selected entry with the configured external editor  hands the file to the editor named in config.json…  │ ",
        " │   short                                                        a short one                                         │ ",
        " │                                                                                                                    │ ",
        " │ [Enter] Execute  [Esc] Close                                                                                       │ ",
        " └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 2, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 7, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 119, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 2, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 4, y: 18, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 66, y: 18, fg: DarkGray, bg: White, underline: Reset, modifier: NONE,
        x: 116, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 118, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 119, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 2, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 4, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 66, y: 19, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 116, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 118, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 119, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 2, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 118, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 119, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 2, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 21, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 117, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 118, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 119, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 119, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
