rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__custom_function_menu_too_narrow_for_descriptions_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " ┌Tools───────────────────────────────────────────────────────────────────────┐ ",
        " │   open the selected entry with the configured external editor              │ ",
        " │   short                                                                    │ ",
        " │                                                                            │ ",
        " │ [Enter] Execute  [Esc] Close                                               │ ",
        " └────────────────────────────────────────────────────────────────────────────┘ ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 7, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 4, y: 10, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 76, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 4, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 76, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 13, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
