rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__custom_function_menu_two_items_first_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                       ┌File Menu───────────────────────┐                       ",
        "                       │   OpenText                     │                       ",
        "                       │   EditBinary                   │                       ",
        "                       │                                │                       ",
        "                       │ [Enter] Execute  [Esc] Close   │                       ",
        "                       └────────────────────────────────┘                       ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 24, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 33, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 57, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 24, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 26, y: 10, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 54, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 56, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 57, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 24, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 26, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 54, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 56, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 57, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 24, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 56, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 57, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 24, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 13, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 55, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 56, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 57, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 57, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
